--- a/storefront/anvy-shop/package.json
+++ b/storefront/anvy-shop/package.json
@@ -25,7 +25,10 @@
     "@angular/platform-server": "~10.0.2",
     "@angular/router": "~10.0.2",
     "@nguniversal/express-engine": "^10.0.1",
+    "bootstrap": "^4.5.0",
     "express": "^4.15.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -36,9 +39,10 @@
     "@angular/compiler-cli": "~10.0.2",
     "@nguniversal/builders": "^10.0.1",
     "@types/express": "^4.17.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0-next.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
