--- a/storefront/anvy-shop/angular.json
+++ b/storefront/anvy-shop/angular.json
@@ -37,8 +37,11 @@
       "prefix": "anvy",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack.config.js"
+            },
             "outputPath": "dist/anvy-shop/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -150,8 +153,11 @@
           }
         },
         "server": {
-          "builder": "@angular-devkit/build-angular:server",
+          "builder": "@angular-builders/custom-webpack:server",
           "options": {
+            "customWebpackConfig": {
+              "path": "./extra-webpack.config.js"
+            },
             "outputPath": "dist/anvy-shop/server",
             "main": "server.ts",
             "tsConfig": "tsconfig.server.json"
