--- a/storefront/anvy-shop/package.json
+++ b/storefront/anvy-shop/package.json
@@ -15,33 +15,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.4",
-    "@angular/common": "~9.1.4",
-    "@angular/compiler": "~9.1.4",
-    "@angular/core": "~9.1.4",
-    "@angular/forms": "~9.1.4",
-    "@angular/platform-browser": "~9.1.4",
-    "@angular/platform-browser-dynamic": "~9.1.4",
-    "@angular/router": "~9.1.4",
-    "@nguniversal/express-engine": "^10.0.1",
-    "@angular/platform-server": "^10.0.2",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
+    "@angular/animations": "9.1.4",
+    "@angular/common": "9.1.4",
+    "@angular/compiler": "9.1.4",
+    "@angular/core": "9.1.4",
+    "@angular/forms": "9.1.4",
+    "@angular/platform-browser": "9.1.4",
+    "@angular/platform-browser-dynamic": "9.1.4",
+    "@angular/platform-server": "9.1.4",
+    "@angular/router": "9.1.4",
+    "@nguniversal/express-engine": "9.1.0",
     "bootstrap": "^4.5.0",
     "express": "^4.15.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "mongodb-client-encryption": "^1.1.0",
+    "mongoose": "^5.9.22",
+    "popper.js": "^1.16.1",
+    "request": "~2.79.0",
+    "rxjs": "~6.5.4",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.2.0",
     "@angular-devkit/build-angular": "~0.901.4",
-    "@angular/cli": "~9.1.4",
-    "@angular/compiler-cli": "~9.1.4",
-    "@angular/language-service": "~9.1.4",
-    "@types/node": "^12.11.1",
+    "@angular/cli": "9.1.4",
+    "@angular/compiler-cli": "9.1.4",
+    "@angular/language-service": "9.1.4",
+    "@nguniversal/builders": "^10.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -52,10 +57,8 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
+    "tslib": "^1.13.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3",
-    "@nguniversal/builders": "^10.0.1",
-    "@types/express": "^4.17.0",
-    "@types/jquery": "^3.5.0"
+    "typescript": "~3.8.3"
   }
 }
