--- a/storefront/anvy-shop/tsconfig.server.json
+++ b/storefront/anvy-shop/tsconfig.server.json
@@ -1,8 +1,8 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
     "outDir": "./out-tsc/server",
+    "resolveJsonModule": true,
     "target": "es2016",
     "types": [
       "node"
