--- a/storefront/anvy-shop/package.json
+++ b/storefront/anvy-shop/package.json
@@ -27,6 +27,7 @@
     "@nguniversal/express-engine": "9.1.0",
     "bootstrap": "^4.5.0",
     "express": "^4.15.2",
+    "faker": "^4.1.0",
     "jquery": "^3.5.1",
     "mongodb-client-encryption": "^1.1.0",
     "mongoose": "^5.9.22",
@@ -43,6 +44,7 @@
     "@angular/language-service": "9.1.4",
     "@nguniversal/builders": "^10.0.1",
     "@types/express": "^4.17.0",
+    "@types/faker": "^4.1.12",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.0",
