Complete setup storefront and admin. Ready for integrate with Shopify

--- a/admin/package.json
+++ b/admin/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "inversify": "^5.0.1",
+    "mongodb-client-encryption": "^1.1.0",
     "mongoose": "^5.9.24",
     "reflect-metadata": "^0.1.13",
     "shopify-api-node": "^3.3.2"
