Setup Shopify App Bridge

--- a/admin/package.json
+++ b/admin/package.json
@@ -5,7 +5,6 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:api": "ts-node-dev -P ./tsconfig.api.json api.ts",
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js"
@@ -13,38 +12,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^3.1.0",
+    "@shopify/app-bridge-react": "^1.26.2",
     "@shopify/koa-shopify-graphql-proxy": "^4.0.1",
     "@shopify/polaris": "^5.0.0-RC.1",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.9",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
-    "faker": "^4.1.0",
     "graphql": "^15.3.0",
-    "inversify": "^5.0.1",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-helmet": "^5.2.0",
-    "koa-logger": "^3.2.1",
-    "koa-router": "^9.1.0",
     "koa-session": "^6.0.0",
-    "mongodb-client-encryption": "^1.1.0",
-    "mongoose": "^5.9.24",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
-    "reflect-metadata": "^0.1.13",
     "shopify-api-node": "^3.3.2",
     "store-js": "^2.0.4",
     "webpack": "^4.43.0"
   },
   "devDependencies": {
     "@shopify/koa-shopify-auth": "^3.1.65",
-    "@types/faker": "^4.1.12",
     "@types/next": "^9.0.0",
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
