--- a/storefront/anvy-shop/package.json
+++ b/storefront/anvy-shop/package.json
@@ -15,46 +15,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.2",
-    "@angular/common": "~10.0.2",
-    "@angular/compiler": "~10.0.2",
-    "@angular/core": "~10.0.2",
-    "@angular/forms": "~10.0.2",
-    "@angular/platform-browser": "~10.0.2",
-    "@angular/platform-browser-dynamic": "~10.0.2",
-    "@angular/platform-server": "~10.0.2",
-    "@angular/router": "~10.0.2",
-    "@nguniversal/express-engine": "^10.0.1",
+    "@angular/animations": "9.1.4",
+    "@angular/common": "9.1.4",
+    "@angular/compiler": "9.1.4",
+    "@angular/core": "9.1.4",
+    "@angular/forms": "9.1.4",
+    "@angular/platform-browser": "9.1.4",
+    "@angular/platform-browser-dynamic": "9.1.4",
+    "@angular/platform-server": "9.1.4",
+    "@angular/router": "9.1.4",
+    "@nguniversal/express-engine": "9.1.0",
     "bootstrap": "^4.5.0",
     "express": "^4.15.2",
+    "faker": "^4.1.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "request": "~2.79.0",
+    "rxjs": "~6.5.4",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.2.0",
-    "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "~10.0.1",
-    "@angular/compiler-cli": "~10.0.2",
+    "@angular-devkit/build-angular": "~0.901.4",
+    "@angular/cli": "9.1.4",
+    "@angular/compiler-cli": "9.1.4",
+    "@angular/language-service": "9.1.4",
     "@nguniversal/builders": "^10.0.1",
     "@types/express": "^4.17.0",
+    "@types/faker": "^4.1.12",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0-next.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
+    "tslib": "^1.13.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.8.3"
   }
 }
