--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@shopify/app-bridge-react": "^1.26.2",
     "@shopify/koa-shopify-graphql-proxy": "^4.0.1",
+    "@shopify/koa-shopify-webhooks": "^2.4.3",
     "@shopify/polaris": "^5.0.0-RC.1",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.9",
@@ -23,6 +24,8 @@
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.13.0",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^8.0.8",
     "koa-session": "^6.0.0",
     "next": "^9.4.4",
     "react": "^16.13.1",
