--- a/admin/package.json
+++ b/admin/package.json
@@ -2,12 +2,12 @@
   "name": "admin",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
+    "dev": "node -r esm server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node -r esm server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,12 +20,13 @@
     "apollo-boost": "^0.4.9",
     "dotenv": "^8.2.0",
     "es6-promise": "^4.2.8",
+    "esm": "^3.2.25",
     "graphql": "^15.3.0",
     "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.13.0",
     "koa-logger": "^3.2.1",
-    "koa-router": "^8.0.8",
+    "koa-router": "^9.1.0",
     "koa-session": "^6.0.0",
     "next": "^9.4.4",
     "react": "^16.13.1",
