--- a/themes/Debut/config.yml
+++ b/themes/Debut/config.yml
@@ -1,9 +1,5 @@
 development:
-  password: $THEMEKIT_PASSWORD
-  theme_id: $THEMEKIT_THEME_ID
-  store: $THEMEKIT_STORE
-production:
-  password: $THEMEKIT_PASSWORD
-  theme_id: $THEMEKIT_THEME_ID
-  store: $THEMEKIT_STORE
-  readonly: true
+  password: $NASHTECH_PASSWORD
+  theme_id: $NASHTECH_THEME_ID
+  store: $NASHTECH_STORE
+
