--- a/storefront/anvy-shop/angular.json
+++ b/storefront/anvy-shop/angular.json
@@ -53,7 +53,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/owl.carousel/dist/assets/owl.carousel.css",
+              "node_modules/owl.carousel/dist/assets/owl.theme.default.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
