--- a/storefront/anvy-shop/package.json
+++ b/storefront/anvy-shop/package.json
@@ -29,6 +29,8 @@
     "express": "^4.15.2",
     "faker": "^4.1.0",
     "jquery": "^3.5.1",
+    "numeral": "^2.0.6",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "request": "~2.79.0",
     "rxjs": "~6.5.4",
@@ -46,7 +48,7 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.54",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
