--- a/storefront/anvy-shop/angular.json
+++ b/storefront/anvy-shop/angular.json
@@ -50,7 +50,12 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/bootstrap-icons/icons/",
+                "output": "/assets/icons/"
+              }
             ],
             "styles": [
               "src/styles.scss",
