--- a/storefront/anvy-shop/package.json
+++ b/storefront/anvy-shop/package.json
@@ -26,14 +26,20 @@
     "@angular/router": "9.1.4",
     "@nguniversal/express-engine": "9.1.0",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.0.0-alpha5",
+    "dotenv": "^8.2.0",
+    "es6-promise": "^4.2.8",
     "express": "^4.15.2",
     "faker": "^4.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "numeral": "^2.0.6",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "request": "~2.79.0",
     "rxjs": "~6.5.4",
+    "shopify-buy": "^2.11.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -48,7 +54,9 @@
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^12.12.54",
+    "@types/shopify-buy": "^2.10.2",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
