--- a/umbraco-integrate/package.json
+++ b/umbraco-integrate/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "build:dev": "webpack --watch"
+    "build:dev": "webpack --watch",
+    "start": "http-server -p 8080 -c-1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "es6-promise": "^4.2.8",
     "isomorphic-fetch": "^2.2.1",
+    "js-cookie": "^2.2.1",
+    "rxjs": "^6.6.2",
     "shopify-buy": "^2.11.0"
   },
   "devDependencies": {
